// Copyright 2019 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
syntax = "proto3";

package ts_mon.common.test;

message MyTarget {
  bool b = 1;
  int64 i = 2;
  string s = 3;
}
